# qq-llm-bot

./: .env.example  .gitignore  README.md  agent.md  bot.py  config.example.toml  pyproject.toml
plugins/llm_group_bot/: __init__.py  admin_command_basic.py  admin_command_game.py  admin_command_memory.py  admin_command_state.py  admin_command_system.py  admin_command_utils.py  admin_commands.py  deferred_vision.py  (+7 more)
qq_llm_bot/: agent_common.py  agent_core.py  agent_extractor_utils.py  agent_extractors.py  agent_fact_extractor.py  agent_fact_helpers.py  agent_final_qa.py  agent_formatters.py  agent_lexicon.py  agent_maintenance.py  agent_memory_curator.py  agent_models.py  agent_participation.py  agent_perception.py  agent_policy_helpers.py  agent_response.py  agent_self_memory.py  agent_self_narrative.py  agent_stickers.py  agent_vision.py  agents.py  bootstrap.py  cognitive_agents.py  cognitive_storage.py  config.py  config_bot_section.py  config_cognition_sections.py  config_loader.py  config_media_sections.py  config_models.py  config_sections.py  config_service_sections.py  config_values.py  dashboard.py  dashboard_assets.py  dashboard_markup.py  dashboard_pending_routes.py  dashboard_read_routes.py  dashboard_scripts.py  dashboard_sticker_routes.py  (+161 more)
scripts/: dedupe_member_facts.py
tests/: conftest.py  helpers.py  test_cognitive_loop.py  test_dashboard.py  test_directness.py  test_guesswho.py  test_llm_usage_report.py  test_media_and_llm.py  test_repetition_guard.py  test_reply_style.py  test_stickers_storage.py  test_storage_dashboard.py  test_whoami.py
