[project]
name = "qq-llm-bot"
version = "0.1.0"
description = "A local NoneBot2 + OneBot V11 framework for an LLM-driven QQ group character bot."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "nonebot2[fastapi,httpx,websockets]>=2.4.0",
  "nonebot-adapter-onebot>=2.4.0",
  "httpx>=0.26.0",
  "Pillow>=10.0.0",
  "python-dotenv>=1.0.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qq_llm_bot*", "plugins*"]
exclude = ["data*"]

[tool.nonebot]
plugins = ["plugins.llm_group_bot"]
plugin_dirs = []
builtin_plugins = []

[tool.ruff]
line-length = 100
target-version = "py310"
